Fixed page overflow x

--- a/src/style/scss/_footer.scss
+++ b/src/style/scss/_footer.scss
@@ -9,11 +9,6 @@ footer {
     flex-direction: column;
 
     height: 23vh;
-    width: 100%;
-
-    .container {
-        width: 100%;
-    }
 
     &__logo {
         color: $font-color-secondary;
@@ -30,9 +25,7 @@ footer {
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
-        line-height: 38px;
         text-align: right;
-        white-space: nowrap;
         color: $font-color;
         font-weight: 300;
         text-align: left;
@@ -42,7 +35,6 @@ footer {
     }
 
     #upper {
-        height: 50%;
         width: 100%;
 
         padding: 10px 0;
@@ -51,7 +43,6 @@ footer {
     }
 
     #lower {
-        height: 50%;
         width: 100%;
 
         background-color: $secondary;
