--- a/src/style/scss/_qr_reader.scss
+++ b/src/style/scss/_qr_reader.scss
@@ -16,7 +16,7 @@
             width: 100vw;
         }
 
-        width: 55vw;
+        width: 45vw;
     }
 
     &__result {
